Mise en place du formulaire de contact

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=eebdcc9115bfb1680034a2feeaa5520d
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://marc-chanteranne@outlook.fr:chameau6@smtp.localhost.com:465?encryption=ssl&auth_mode=login
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
